lcs-web (2.4.6~1) Lcs; urgency=low

  [ Philippe Leclerc ]
  * add scripts for redirect email
  * filename forward registered hard in scripts
  * add scripts for display log in Administration menu	

  [ Jean-Luc Chretien ]
  * Fixing safe_mode On for type php users in public_html in userdiraddtypephp.template

 -- Philippe Leclerc <philippe.leclerc1@ac-caen.fr>  Mon,  2 Nov 2009 00:05:49 +0100

lcs-web (2.4.5) Lcs; urgency=low

  * remove tilde

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Tue, 27 Oct 2009 17:17:14 +0100

lcs-web (2.4.5~3) Lcs; urgency=low

  * fix lcs-web-fixright
  * remove old sudo entries

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Mon, 26 Oct 2009 01:17:57 +0100

lcs-web (2.4.5~1) Lcs; urgency=low

  * integrating lcs-make-sudoers

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Sun, 25 Oct 2009 14:11:57 +0100

lcs-web (2.4.4) Lcs; urgency=low

  * Make a stable release candidate 

 -- Jean Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 23 Oct 2009 13:48:39 +0200

lcs-web (2.4.4~2) Lcs; urgency=low

  [ Jean Luc Chretien ]
  * Fix port detection in config.inc.ph for register_globals Off
  * Add three helpdesk ChiconesTel
  * Modify barre.php for helpdesk
  * Modify postinst for update acces policy to .py*

  [ Sebastien Tack ]
  * Add Ext JS: Cross-Browser Rich Internet Application Framework in /var/www/lib/js

  [ Raphaël Hertzog ]
  * Modify lcs-web-config to setup a more strict Apache configuration so
    that *.py? files can't be downloaded.

 -- Jean Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 23 Oct 2009 13:32:59 +0200

lcs-web (2.4.3) Lcs; urgency=low

  *  Make a stable release

 -- Jean Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 02 Oct 2009 14:30:31 +0200

lcs-web (2.4.3~4) Lcs; urgency=low

  [ Simon Cavey ]
  * fix assist home directory for LCS2 SFTP

  [ Jean Luc Chretien ]
  * Add PATh in LcsMaj script 
  * Correct typo in auth.php
  * Correct path for mysqlPasswInit.pl in functions.inc.php 